fixed experience scrollbar section

--- a/src/styles/experience.css
+++ b/src/styles/experience.css
@@ -2,9 +2,8 @@
   background: var(--bg-dark-blue);
   border-bottom: 3px solid var(--main-color);
   overflow-x: auto;
-  width: 100%;
-  padding-left: 5rem;
-  padding-right: 2rem;
+  padding-left: 2rem;
+  padding-right: 1rem;
 }
 
 #experience > .flex-items {
@@ -16,10 +15,12 @@
   display: flex;
   list-style: none;
   gap: 1.4rem;
-  justify-content: flex-start;
-  overflow-x: scroll;
+  /* justify-content: flex-start; */
+  justify-content: center;
+  overflow-x: auto;
   width: 100%;
   overflow-y: hidden;
+  padding-bottom: 2rem;
 }
 #experience ul li {
   background: var(--bg-blue-secondary);
@@ -84,13 +85,15 @@
   margin-right: 0.4rem;
 }
 
+/* scroll  */
 #experience ul::-webkit-scrollbar {
   width: 5px;
-  /* Chrome */
+  height: 7px;
+  background: var(--bg-grey);
+  border-radius: 10px;
 }
 
 #experience ul::-webkit-scrollbar-thumb {
   background: var(--main-color);
   border-radius: 10px;
-  width: 1px;
 }
